v3.8.5 (XXXX-XX-XX)
-------------------

* Fixed BTS-693: Sort-limit rule now always ensures proper LIMIT node placement
  to avoid possible invalid results in the fullCount data.

* Updated OpenSSL to 1.1.1m and OpenLDAP to 2.6.0.

* Updated arangosync to 2.7.0.

* Fixed PRESUPP-439: In arangoimport, for CSV and TSV files, it could happen
  that a buffer containing only the header would be sent to the server, and also
  batches would contain the documents equivalent to the csv rows in them, but
  not the header, which should be sent together with the documents.

* Changed various default values for RocksDB to tune operations for different
  typical scenarios like gp2 type volumes and gp3 type volumes and locally
  attached SSDs with RAID0:
  - `--rocksdb.level0-slowdown-trigger` has been decreased from 20 to 16
  - `--rocksdb.level0-stop-trigger` has been increased from 36 to 256
  - `--rocksdb.max-background-jobs` has been increased to the number of cores
    and is no longer limited to 8
  - `--rocksdb.enabled-pipelined-write` is now `true` by default instead of
    `false`
  - `--rocksdb.throttle-frequency` has been decreased from 60000ms down to
    1000ms per iteration, which makes the RocksDB throttle react much quicker
  - `--rocksdb.pending-compactions-slowdown-trigger` has been decreased from 64
    GB down to 8 GB
  - `--rocksdb.pending-compactions-stop-trigger` has been decreased from 256 GB
    down to 16 GB
  - `--rocksdb.max-subcompactions` has been increased from 1 to 2
  - `--rocksdb.throttle-slots` has been increased from 63 to 120
  Combined, these changes help ArangoDB/RocksDB to react quicker to a backlog of
  background jobs and thus to prevent catastrophic stops which abort data
  ingestion or lead to cluster internal timeouts.

* Added startup options to adjust previously hard-coded parameters for RocksDB's
  behavior:

  - `--rocksdb.pending-compactions-bytes-slowdown-trigger` controls RocksDB's