@@ -36,7 +36,8 @@ ServerSecurityFeature::ServerSecurityFeature(application_features::ApplicationSe
     : ApplicationFeature(server, "ServerSecurity"),
       _enableFoxxApi(true),
       _enableFoxxStore(true),
-      _hardenedRestApi(false) {
+      _hardenedRestApi(false),
+      _foxxAllowInstallFromRemote(true) {
   setOptional(false);
   startsAfter<application_features::GreetingsFeaturePhase>();
 }
@@ -57,6 +58,7 @@ void ServerSecurityFeature::collectOptions(std::shared_ptr<ProgramOptions> optio
                      arangodb::options::Flags::OnCoordinator,
                      arangodb::options::Flags::OnSingle))
                      .setIntroducedIn(30500);
+
   options->addOption("--foxx.store", "enables Foxx store in web interface",
                      new BooleanParameter(&_enableFoxxStore),
                      arangodb::options::makeFlags(
@@ -64,7 +66,14 @@ void ServerSecurityFeature::collectOptions(std::shared_ptr<ProgramOptions> optio
                      arangodb::options::Flags::OnCoordinator,
                      arangodb::options::Flags::OnSingle))
                      .setIntroducedIn(30500);
-
+  
+  options->addOption("--foxx.allow-install-from-remote", "allow installing Foxx apps from remote URLs other than Github",
+                     new BooleanParameter(&_foxxAllowInstallFromRemote),
+                     arangodb::options::makeFlags(
+                     arangodb::options::Flags::DefaultNoComponents,
+                     arangodb::options::Flags::OnCoordinator,
+                     arangodb::options::Flags::OnSingle))
+                     .setIntroducedIn(30805);
 }
 
 bool ServerSecurityFeature::isFoxxApiDisabled() const {
@@ -91,4 +100,8 @@ bool ServerSecurityFeature::canAccessHardenedApi() const {
     }
   }
   return allowAccess;
+}
+  
+bool ServerSecurityFeature::foxxAllowInstallFromRemote() const {
+  return _foxxAllowInstallFromRemote;
 }
