@@ -8,6 +8,9 @@ role = true
 [database]
 force-sync-properties = false
 
+[foxx]
+allow-install-from-remote = true
+
 [javascript]
 allow-admin-execute = true
 startup-directory = @TOP_DIR@/js
